# sdl

./: CookieClicker.c  README.md  main.c  make.bat
.github/workflows/: cmake-multi-platform.yml
CookieClicker_v1_CookieBMP/: CMakeLists.txt
CookieClicker_v2/: CMakeLists.txt  CookieBmp.h  CookieClicker.c  CookieClicker.h
CookieClicker_v3/: CMakeLists.txt  Cookie.c  Cookie.h  CookieBmp.c  CookieBmp.h  CookieClicker.c  CookieClicker.h  Counter.c  Counter.h  Cursor.c  Cursor.h  Screen.h  Utils.c  Utils.h  build_exe.bat
